# food-reward-analysis

./: .gitignore  CLAUDE.md  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
.serena/: project.yml
.serena/memories/: code_dependencies.md  code_style.md  project_overview.md  rsa_roi_centered_analysis.md  suggested_commands.md  task_completion.md
config/: config.json
data_images/: data_image_info.csv  used_image_ids.txt
docs/: analysis_1_parametric_glm_second_level.md  analysis_2_lss_searchlight.md  clip_archetecture.md  dnn_analysis_implementation.md
paper/: appendix.typ  header.typ  main.typ  ref.bib  settings.typ  val_ref.bib  valuation.typ
scripts/: README.md  compress_smoothed_nii.sh  dcm2bids.sh  extract_dnn_features.py  fmriprep_batches.sh  update_intended_for.sh
scripts/behavior_analysis/: README.md  pyproject.toml  train.py  utils.py
scripts/behavior_glm/control/: make_glm_lum_run.m  make_glm_nutri_run.m  make_glm_rgb_nutri_run.m  make_glm_rgb_run.m  run_first_level_rgb_nutri.m
scripts/behavior_glm/lss_model/: create_beta_info_simple.sh  extract_beta_info.m  extract_beta_info.py  make_lss_glm_run.m  run_lss_glm.m  run_lss_parallel.sh  (+1 more)
scripts/dnn_analysis/: README.md
scripts/preprocess/: run_preprocess.m  run_smoothing_all.m  run_smoothing_subject.m  smoothing.m  unzip_nii.m
scripts/suzuki/: make_glm_001p_6.m  run_model_1st_6.m  run_model_RFX.m  run_model_con.m  s06_Smooth_6.m
scripts/utils/: cleanup_leftovers.sh  compress_and_merge_dicom.sh  copy_confounds_to_local.sh  move_derivatives_to_external.sh  symlink_to_gdrive.sh
(+95 files in other folders)
